--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,39 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.example.scrumproyect">
+
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-            android:allowBackup="true"
+            android:name="com.example.scrumproyect.view.ui.application.ScrumActivity"
+            android:allowBackup="false"
+            android:debuggable="${IS_DEBUGGABLE}"
+            android:hardwareAccelerated="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
+            android:largeHeap="true"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
-        </activity>
-        <activity android:name=".MainActivity">
+            android:theme="@style/AppTheme"
+            tools:ignore="HardcodedDebugMode">
+        <activity
+                android:name=".MainActivity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:resizeableActivity="false"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="stateHidden"
+                tools:targetApi="n">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity android:name="com.facebook.FacebookActivity"
-                  android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-                  android:label="@string/app_name"/>
-        <activity android:name="com.facebook.CustomTabActivity" android:exported="true">
+        <activity
+                android:name="com.example.scrumproyect.view.ui.activity.Main2Activity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:resizeableActivity="false"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="stateHidden"
+                tools:targetApi="n">
+        </activity>
+        <activity android:name=".LoginActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:resizeableActivity="false"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="stateHidden"
+                  tools:targetApi="n"/>
+        <activity
+                android:name="com.facebook.FacebookActivity"
+                android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+                android:label="@string/app_name"/>
+        <activity
+                android:name="com.facebook.CustomTabActivity"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
+
                 <data android:scheme="@string/fb_login_protocol_scheme"/>
             </intent-filter>
         </activity>
-
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
-
+        <meta-data
+                android:name="com.facebook.sdk.ApplicationId"
+                android:value="@string/facebook_app_id"/>
     </application>
 
 </manifest>
