--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
     /*implementation 'com.afollestad.material-dialogs:core:3.1.1'*/
-    implementation ('com.afollestad.material-dialogs:core:0.9.6.0') {
+    implementation('com.afollestad.material-dialogs:core:0.9.6.0') {
         exclude group: 'com.android.support', module: 'appcompat-v7'
         exclude group: 'com.android.support', module: 'recyclerview-v7'
     }
@@ -71,8 +71,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
 
+    implementation 'io.paperdb:paperdb:2.6'
+
     api 'com.google.dagger:dagger:2.24'
-    annotationProcessor  'com.google.dagger:dagger-compiler:2.24'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
     /*api 'com.google.dagger:dagger:2.13'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.13'*/
 }
