--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-            android:name="com.example.scrumproyect.view.ui.application.ScrumActivity"
+            android:name=".view.ui.application.ScrumActivity"
             android:allowBackup="false"
             android:debuggable="${IS_DEBUGGABLE}"
             android:hardwareAccelerated="true"
@@ -17,9 +17,26 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="HardcodedDebugMode">
+        <activity android:name=".view.ui.activity.AddProductActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:noHistory="true"
+                  android:resizeableActivity="false"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="stateHidden"
+                  tools:targetApi="n">
+        </activity>
+        <activity android:name=".view.ui.activity.DetailProductActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:noHistory="true"
+                  android:resizeableActivity="false"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="stateHidden"
+                  tools:targetApi="n">
+        </activity>
         <activity
-                android:name=".MainActivity"
+                android:name=".view.ui.activity.SplashActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
+                android:noHistory="true"
                 android:resizeableActivity="false"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="stateHidden"
@@ -31,19 +48,29 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="com.example.scrumproyect.view.ui.activity.Main2Activity"
+                android:name=".MainActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:resizeableActivity="false"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="stateHidden"
                 tools:targetApi="n">
         </activity>
-        <activity android:name=".LoginActivity"
-                  android:configChanges="orientation|keyboardHidden|screenSize"
-                  android:resizeableActivity="false"
-                  android:screenOrientation="portrait"
-                  android:windowSoftInputMode="stateHidden"
-                  tools:targetApi="n"/>
+        <activity
+                android:name=".LoginActivity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:resizeableActivity="false"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="stateHidden"
+                tools:targetApi="n">
+        </activity>
+        <activity
+                android:name=".view.ui.activity.Main2Activity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:resizeableActivity="false"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="stateHidden"
+                tools:targetApi="n">
+        </activity>
         <activity
                 android:name="com.facebook.FacebookActivity"
                 android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
@@ -60,6 +87,7 @@
                 <data android:scheme="@string/fb_login_protocol_scheme"/>
             </intent-filter>
         </activity>
+
         <meta-data
                 android:name="com.facebook.sdk.ApplicationId"
                 android:value="@string/facebook_app_id"/>
