--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.google.firebase:firebase-auth:19.1.0'
+    implementation 'com.google.firebase:firebase-core:17.2.0'
+
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
     implementation 'com.facebook.android:facebook-login:4.40.0'
 
     implementation 'androidx.cardview:cardview:1.0.0'
