--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,25 +18,10 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="HardcodedDebugMode">
-        <activity android:name=".view.ui.activity.AddProductActivity"
-                  android:configChanges="orientation|keyboardHidden|screenSize"
-                  android:noHistory="true"
-                  android:resizeableActivity="false"
-                  android:screenOrientation="portrait"
-                  android:windowSoftInputMode="stateHidden"
-                  tools:targetApi="n">
-        </activity>
-        <activity android:name=".view.ui.activity.DetailProductActivity"
-                  android:configChanges="orientation|keyboardHidden|screenSize"
-                  android:noHistory="true"
-                  android:resizeableActivity="false"
-                  android:screenOrientation="portrait"
-                  android:windowSoftInputMode="stateHidden"
-                  tools:targetApi="n">
-        </activity>
         <activity
                 android:name=".view.ui.activity.SplashActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
+                android:theme="@style/SplashTheme"
                 android:noHistory="true"
                 android:resizeableActivity="false"
                 android:screenOrientation="portrait"
@@ -48,30 +33,41 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".view.ui.activity.AddProductActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:noHistory="true"
+                  android:resizeableActivity="false"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="stateHidden"
+                  tools:targetApi="n"/>
+        <activity android:name=".view.ui.activity.DetailProductActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:noHistory="true"
+                  android:resizeableActivity="false"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="stateHidden"
+                  tools:targetApi="n"/>
         <activity
                 android:name=".MainActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:resizeableActivity="false"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="stateHidden"
-                tools:targetApi="n">
-        </activity>
+                tools:targetApi="n"/>
         <activity
                 android:name=".LoginActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:resizeableActivity="false"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="stateHidden"
-                tools:targetApi="n">
-        </activity>
+                tools:targetApi="n"/>
         <activity
                 android:name=".view.ui.activity.Main2Activity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:resizeableActivity="false"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="stateHidden"
-                tools:targetApi="n">
-        </activity>
+                tools:targetApi="n"/>
         <activity
                 android:name="com.facebook.FacebookActivity"
                 android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
