--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,15 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="HardcodedDebugMode">
+        <activity android:name=".view.ui.activity.NewUserActivity">
+        </activity>
         <activity
                 android:name=".view.ui.activity.SplashActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
-                android:theme="@style/SplashTheme"
                 android:noHistory="true"
                 android:resizeableActivity="false"
                 android:screenOrientation="portrait"
+                android:theme="@style/SplashTheme"
                 android:windowSoftInputMode="stateHidden"
                 tools:targetApi="n">
             <intent-filter>
@@ -33,20 +35,22 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".view.ui.activity.AddProductActivity"
-                  android:configChanges="orientation|keyboardHidden|screenSize"
-                  android:noHistory="true"
-                  android:resizeableActivity="false"
-                  android:screenOrientation="portrait"
-                  android:windowSoftInputMode="stateHidden"
-                  tools:targetApi="n"/>
-        <activity android:name=".view.ui.activity.DetailProductActivity"
-                  android:configChanges="orientation|keyboardHidden|screenSize"
-                  android:noHistory="true"
-                  android:resizeableActivity="false"
-                  android:screenOrientation="portrait"
-                  android:windowSoftInputMode="stateHidden"
-                  tools:targetApi="n"/>
+        <activity
+                android:name=".view.ui.activity.AddProductActivity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:noHistory="true"
+                android:resizeableActivity="false"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="stateHidden"
+                tools:targetApi="n"/>
+        <activity
+                android:name=".view.ui.activity.DetailProductActivity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:noHistory="true"
+                android:resizeableActivity="false"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="stateHidden"
+                tools:targetApi="n"/>
         <activity
                 android:name=".MainActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
@@ -90,7 +94,7 @@
                 android:value="@string/facebook_app_id"/>
         <meta-data
                 android:name="com.google.android.gms.version"
-                android:value="@integer/google_play_services_version" />
+                android:value="@integer/google_play_services_version"/>
     </application>
 
 </manifest>
