--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-            android:name=".view.ui.application.ScrumActivity"
+            android:name=".view.ui.application.ScrumApplication"
             android:allowBackup="false"
             android:debuggable="${IS_DEBUGGABLE}"
             android:hardwareAccelerated="true"
@@ -52,21 +52,14 @@
                 android:windowSoftInputMode="stateHidden"
                 tools:targetApi="n"/>
         <activity
-                android:name=".MainActivity"
+                android:name=".view.ui.activity.MainActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:resizeableActivity="false"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="stateHidden"
                 tools:targetApi="n"/>
         <activity
-                android:name=".LoginActivity"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:resizeableActivity="false"
-                android:screenOrientation="portrait"
-                android:windowSoftInputMode="stateHidden"
-                tools:targetApi="n"/>
-        <activity
-                android:name=".view.ui.activity.Main2Activity"
+                android:name=".view.ui.activity.LoginActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:resizeableActivity="false"
                 android:screenOrientation="portrait"
