--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 
     //NUEVAS IMPLEMENTACIONES
     implementation 'com.google.firebase:firebase-firestore:21.1.1'
