--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,6 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="HardcodedDebugMode">
-        <activity android:name=".view.ui.activity.NewUserActivity">
-        </activity>
         <activity
                 android:name=".view.ui.activity.SplashActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
@@ -35,14 +33,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-                android:name=".view.ui.activity.AddProductActivity"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:noHistory="true"
-                android:resizeableActivity="false"
-                android:screenOrientation="portrait"
-                android:windowSoftInputMode="stateHidden"
-                tools:targetApi="n"/>
         <activity
                 android:name=".view.ui.activity.DetailArticleActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
@@ -65,6 +55,22 @@
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="stateHidden"
                 tools:targetApi="n"/>
+        <activity
+                android:name=".view.ui.activity.YoutubeViewerActivity"
+                android:configChanges="keyboardHidden|screenSize"
+                android:noHistory="true"
+                android:resizeableActivity="false"
+                android:screenOrientation="landscape"
+                android:windowSoftInputMode="stateHidden"
+                tools:targetApi="n" />
+        <activity
+                android:name=".view.ui.activity.NewUserActivity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:noHistory="true"
+                android:resizeableActivity="false"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="stateHidden"
+                tools:targetApi="n" />
         <activity
                 android:name="com.facebook.FacebookActivity"
                 android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
