--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,14 +12,17 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 android {
     flavorDimensions "default"
     compileSdkVersion 29
-    buildToolsVersion "29.0.0"
+
     defaultConfig {
-        applicationId "com.example.scrumproyect"
+        applicationId "com.agility.wsmoke"
         minSdkVersion 21
         targetSdkVersion 29
+
         versionCode 1
         versionName "1.0"
+
         multiDexEnabled true
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [IS_DEBUGGABLE: "true"]
     }
@@ -45,7 +48,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
 
     lintOptions {
         checkReleaseBuilds false
