--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,13 +18,12 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
 
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.1"
 
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        manifestPlaceholders = [IS_DEBUGGABLE: "false"]
     }
 
     signingConfigs {
@@ -38,13 +37,17 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+            shrinkResources true
+            minifyEnabled true
             useProguard false
+            manifestPlaceholders = [IS_DEBUGGABLE: "true"]
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
             shrinkResources false
             minifyEnabled false
             useProguard false
+            manifestPlaceholders = [IS_DEBUGGABLE: "true"]
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
