proguard rule- version+

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
 
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
 
         multiDexEnabled true
 
@@ -39,8 +39,8 @@ android {
             signingConfig signingConfigs.release
             shrinkResources true
             minifyEnabled true
-            useProguard false
-            manifestPlaceholders = [IS_DEBUGGABLE: "false"]
+            useProguard true
+            manifestPlaceholders = [IS_DEBUGGABLE: "true"]
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
